# src/app/core/services/model/tblPrediccionRutaYTblRutaDto.ts
@@ -13,9 +13,13 @@ export interface TblPrediccionRutaYTblRutaDto {
     id?: number;
     descripcion?: string | null;
     idFamilia?: number | null;
+    nombreFamilia?: string | null;
     tipoRuta?: string | null;
     linea?: number | null;
     restriccion?: number | null;
+    nombreRestriccion?: string | null;
+    precision?: number | null;
+    listaEquipos?: Array<string> | null;
     sugerencia?: boolean;
     mensaje?: string | null;
 }
